--- a/README.org
+++ b/README.org
@@ -4,7 +4,8 @@ this project exists only for learning 2 tecnologies at the same time
 
 * Todo
 - [X] Dockerize backend and frontend
-- [-] make the actual thing work somewhat
+- [X] make the actual thing work somewhat
+- [-] themes and proper styling
 - [ ] make it so that the client does not get redirected to the backend when trying to open document
 
 
