--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@ this project exists only for learning 2 tecnologies at the same time
 - [X] Dockerize backend and frontend
 - [X] make the actual thing work somewhat
 - [X] themes and proper styling
-- [ ] make it so that the client does not get redirected to the backend when trying to open document
+- [X] make it so that the client does not get redirected to the backend when trying to open document
 
 
 * How to use/start
